# queue_system_simulator

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  package-lock.json  package.json  plot_graphs.py  pyproject.toml  sample_data_test_user.csv  sample_requests.csv
.github/workflows/: ci.yml
chrome-extension-llm-translator/: .gitignore  index.html  options.html  package-lock.json  package.json  vite.config.ts
chrome-extension-llm-translator/public/: manifest.json  options.html
chrome-extension-llm-translator/src/: App.tsx  background.ts  content.ts
config/: settings.py
docs/: diagram.md
lib/: app-stack.ts
scripts/: generate_sample_data.py  seed-data.ts
src/: api_client.py  csv_parser.py  data_model.py  queue_manager.py  simulator.py  statistics.py  worker.py
tests/: test_api_client.py  test_csv_parser.py  test_data_model.py  test_queue_manager.py  test_simulator.py  test_statistics.py  test_worker.py
